Fix misalignment in the stats display

--- a/src/pages/invest/style.less
+++ b/src/pages/invest/style.less
@@ -16,7 +16,8 @@
     color: var(--color-secondary);
  }
  .info-label {
-    text-align: center;
+   text-align: center;
+   height: 24px;
   }
 }
 
